"Add document title and styled paragraph elements"

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <h1>my first project!</h1>
     <p>This is my first project build in an IDE!</p>
     <img src="assets/images/ci-logo.png" alt="Code Institute Logo">
+<p>"New text that I don't like"</p>
 </body>
-</html>
